# congestion-utm-freespace

./: .gitignore  README.md  pyproject.toml
analysis/: altitude_benchmark.py  astar_viz_cells.py  bench_ab.py  bench_astar.py  bench_batch.py  bench_sipp.py  prof_astar.py  prof_shortcut.py  rrt_highsamples.py  sweep_heuristic_weight.py  xuss_conflict_demo.py
context/: ASTM_NOTES.md  sibling_reference.md
experiments/: TELEMETRY_DESIGN.md  compare_optimizers.py  compare_planners.py  lambda_sweep.py  make_replay.py  metro_scenario.py  push_pull_results.py  replay.py  run.py
experiments/batch/: compare_planners.sh  lambda_sweep.sh  replay_demo.sh
experiments/readouts/: __init__.py  compare.py  curve.py  figures.py  histograms.py  replay.py  uss_breakdown.py
freespace_sim/: __init__.py  config.py  conflict.py  cost.py  demand.py  dss.py  geometry.py  ledger.py  mechanism.py  metrics.py  runs.py  scenario.py  scenarios.py  sim.py  telemetry.py  types.py  uss.py  verify.py  viz.py  viz_html.py  volumes.py
freespace_sim/planner/: __init__.py  astar.py  astar_kernel.py  compiled_hex_occupancy.py  compiled_occupancy.py  decoupled.py  hexgrid.py  milp.py  occupancy.py  opt.py  rrt.py  shortcut.py  sipp.py  sipp_kernel.py  straight.py  terminal_capacity.py
tests/: test_astar.py  test_astar_compiled.py  test_column_index.py  test_config.py  test_conflict.py  test_cost.py  test_demand_hub.py  test_geometry.py  test_hexgrid.py  test_hub_conflict_filed.py  test_hub_placement.py  test_lanes.py  test_lazy.py  test_ledger.py  test_mechanism.py  test_metrics.py  test_multi_uss.py  test_multilevel_e2e.py  test_occupancy.py  test_planner_decoupled.py  test_planner_milp.py  test_planner_opt.py  test_planner_rrt.py  test_planner_straight.py  test_readouts.py  test_runs.py  test_scenarios.py  test_shortcut.py  test_sim.py  test_sipp.py  test_sipp_compiled.py  test_sipp_kernel_3d.py  test_telemetry.py  test_terminal.py  test_terminal_capacity.py  test_terminal_milp.py  test_verify.py  test_viz.py  test_volumes.py
(+4 files in other folders)
