[project]
name = "freespace-sim"
version = "0.1.0"
description = "Free-space UTM strategic deconfliction simulator (ASTM F3548-21), FCFS, 3D corridors"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "python-fcl>=0.7",   # 3D collision/deconfliction engine (Box/Cylinder, GJK/EPA, broadphase)
    "trimesh>=4.0",      # 3D mesh construction + visualization (wraps python-fcl)
    "pandas>=2.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "shapely>=2.0",      # optional: top-down 2D projections of volumes in figures only
    "scipy>=1.17.1",
    "pulp>=3.3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
cloud = ["huggingface_hub>=0.20"]   # optional: push/pull run folders to a HF Hub dataset repo
compiled = ["numba>=0.59"]          # optional: numba JIT for the compiled A* air-search kernel (astar_kernel)

[dependency-groups]
# Mirrors the `compiled` extra (keep the pin in sync). Listed in tool.uv.default-groups so EVERY
# plain `uv run` / `uv sync` installs numba: the kernel is byte-exact and ~5-7× the reference search,
# so there is no reason to run without it — and forgetting `--extra compiled` used to silently fall
# back to the slow pure-Python A* (issue #30). `--extra compiled` still works for old invocations.
# Opt out (e.g. to exercise the reference fallback deliberately) with `uv run --no-default-groups`.
compiled = ["numba>=0.59"]

[tool.uv]
default-groups = ["compiled"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["freespace_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks slow tests (deselect with '-m \"not slow\"')"]
filterwarnings = [
    # PuLP 3.x emits DeprecationWarnings about the future 4.0 API (one per variable) — not ours
    "ignore::DeprecationWarning:pulp",
]

[tool.ruff]
line-length = 100
target-version = "py312"
